fully Atntcatd, inserted Admin,Initialized Yaml,Integerated Testing